--- a/sass/pages/_homepage.scss
+++ b/sass/pages/_homepage.scss
@@ -1,7 +1,10 @@
 // desktop version
 @media screen and (min-width: 768px) {
+  body{
+    overflow-y: hidden;
+  }
   .container {
-    min-width: 400vw;
+    min-width: 330vw;
     min-height: 100vh;
   }
   .content {
@@ -9,27 +12,32 @@
     display: inline-block;
     &:nth-child(1) {
       background-color: $red;
-      width: 25%;
+      width: 30%;
     }
     &:nth-child(2) {
       background-color: $blue;
-      width: 25%;
+      width: 30%;
     }
     &:nth-child(3) {
       background-color: $red;
-      width: 25%;
+      width: 30%;
     }
     &:nth-child(4) {
       background-color: $blue;
-      width: 20.2%;
+      width: 8.6%;
+    }
+    &:nth-child(5) {
+      width: 1%;
+      .footer {
+
+        height: 100vh;
+        .social {
+          display: block;
+        }
+      }
 
     }
+
   }
-  .footer {
-    float: right;
-    height:100vh;
-     img {
-       display:block;
-     }
-  }
+
 }
